# visual-mark

./: .gitignore  CMakeLists.txt  README.md  make.sh
.github/: build.yml
.github/workflows/: main.yml
cmake/: global_definition.cmake  install.cmake
config/: config.json  config_default.yaml
core/: main.cpp
core/runtime/: application_manager.cc  application_manager.h  global_definition.h  global_definition.h.in
doc/: plan.md  structure.md
scripts/: create_form.sh
window/: mainwindow.qrc
window/main_form/include/: mainwindow.h  mainwindow_ui.h  qribbon.h  qribbon_ui.h
window/main_form/src/: mainwindow.cpp  qribbon.cpp
window/select_form/: select_form.cpp  select_form.h
window/translations/: cn.ts
